syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.infinitbyte.framework.cluster";
option java_outer_classname = "ClusterMetadataProto";

package cluster;

service Metadata {
    rpc Execute (MetadataRequest) returns (MetadataResponse) {}
}

service Discovery {
    rpc	Join (JoinRequest) returns (JoinResponse){}
    rpc Ping (HealthCheckRequest) returns (HealthCheckResponse) {}
}

message MetadataRequest {
    string op = 1;
    string key = 2;
    string value = 3;
}

message MetadataResponse {
    string message = 1;
}

message JoinRequest {
    string node_name = 1;
    string node_ip = 2;
    uint32 node_port = 3;
}

message JoinResponse {}

message HealthCheckRequest {
    string node_name = 1;
    string node_ip = 2;
    uint32 node_port = 3;
}

message HealthCheckResponse {
    bool success = 1;
}
